@@ -1,7 +1,7 @@
 #Ruta Client properties
-#Sun Jan 07 11:28:45 CET 2018
+#Sun Jan 07 12:02:55 CET 2018
 mainFrame.height=832
-started=false
+started=true
 mainFrame.title=Ruta Client - Rutasd
 mainFrame.top=112
 D\:\\Fakultet\\_Diplomski\\_diplomski\ rad\\git\\RutaClient=false
